--- a/app/src/main/res/layout/activity_pregraph.xml
+++ b/app/src/main/res/layout/activity_pregraph.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
         android:layout_marginTop="20dp"
-        android:text="Выберите вид графика:"
+        android:text="@string/vid"
         android:textColor="@android:color/holo_blue_light"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -35,74 +35,78 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Далее"
+            android:text="@string/dalee"
             android:textColor="@android:color/background_dark" />
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Введите данные:"
+        android:text="@string/dannye"
         android:textColor="@android:color/holo_blue_light"
         android:textSize="24sp"
         android:textStyle="bold"
         android:visibility="invisible" />
 
-    <EditText
-        android:id="@+id/input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="20"
-        android:inputType="numberDecimal|numberSigned"
-        android:textColor="@android:color/black"
-        android:textColorHighlight="@android:color/darker_gray"
-        android:textColorHint="@android:color/black"
-        android:textColorLink="@android:color/darker_gray"
-        android:textStyle="italic"
-        android:visibility="invisible" />
+        <EditText
+            android:id="@+id/input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:ems="20"
+            android:hint="@string/_0"
+            android:inputType="numberDecimal|numberSigned"
+            android:textColor="@android:color/black"
+            android:textColorHighlight="@android:color/darker_gray"
+            android:textColorHint="@android:color/black"
+            android:textColorLink="@android:color/darker_gray"
+            android:textStyle="italic"
+            android:visibility="invisible" />
 
-    <EditText
-        android:id="@+id/input1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="20"
-        android:inputType="numberDecimal|numberSigned"
-        android:textColor="@android:color/black"
-        android:textColorHighlight="@android:color/darker_gray"
-        android:textColorHint="@android:color/black"
-        android:textColorLink="@android:color/darker_gray"
-        android:textStyle="italic"
-        android:visibility="invisible" />
+        <EditText
+            android:id="@+id/input1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:ems="20"
+            android:hint="@string/_0"
+            android:inputType="numberDecimal|numberSigned"
+            android:textColor="@android:color/black"
+            android:textColorHighlight="@android:color/darker_gray"
+            android:textColorHint="@android:color/black"
+            android:textColorLink="@android:color/darker_gray"
+            android:textStyle="italic"
+            android:visibility="invisible" />
 
-    <EditText
-        android:id="@+id/input2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="20"
-        android:inputType="numberDecimal|numberSigned"
-        android:textColor="@android:color/black"
-        android:textColorHighlight="@android:color/darker_gray"
-        android:textColorHint="@android:color/black"
-        android:textColorLink="@android:color/darker_gray"
-        android:textStyle="italic"
-        android:visibility="invisible" />
+        <EditText
+            android:id="@+id/input2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:ems="20"
+            android:hint="@string/_0"
+            android:inputType="numberDecimal|numberSigned"
+            android:textColor="@android:color/black"
+            android:textColorHighlight="@android:color/darker_gray"
+            android:textColorHint="@android:color/black"
+            android:textColorLink="@android:color/darker_gray"
+            android:textStyle="italic"
+            android:visibility="invisible" />
 
-    <EditText
-        android:id="@+id/input3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="20"
-        android:inputType="numberDecimal|numberSigned"
-        android:textColor="@android:color/black"
-        android:textColorHighlight="@android:color/darker_gray"
-        android:textColorHint="@android:color/black"
-        android:textColorLink="@android:color/darker_gray"
-        android:textStyle="italic"
-        android:visibility="invisible" />
+        <EditText
+            android:id="@+id/input3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:ems="20"
+            android:hint="@string/_0"
+            android:inputType="numberDecimal|numberSigned"
+            android:textColor="@android:color/black"
+            android:textColorHighlight="@android:color/darker_gray"
+            android:textColorHint="@android:color/black"
+            android:textColorLink="@android:color/darker_gray"
+            android:textStyle="italic"
+            android:visibility="invisible" />
 
         <EditText
             android:id="@+id/input4"
@@ -110,6 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:ems="20"
+            android:hint="@string/_0"
             android:inputType="numberDecimal|numberSigned"
             android:textColor="@android:color/black"
             android:textColorHighlight="@android:color/darker_gray"
