--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -84,9 +84,9 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView7"
         android:layout_alignBottom="@+id/textView7"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="14dp"
         android:layout_toEndOf="@+id/textView7"
-        android:text="0"
+        android:text="@string/_0"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 
