--- a/app/src/main/res/layout/activity_urav.xml
+++ b/app/src/main/res/layout/activity_urav.xml
@@ -102,7 +102,7 @@
         android:layout_alignBottom="@+id/textView6"
         android:layout_marginStart="14dp"
         android:layout_toEndOf="@id/textView6"
-        android:text="0"
+        android:text="@string/_0"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 
@@ -126,7 +126,7 @@
         android:layout_alignBottom="@+id/textView2"
         android:layout_marginStart="14dp"
         android:layout_toEndOf="@id/textView2"
-        android:text="0"
+        android:text="@string/_0"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 
