--- a/app/src/main/res/layout/activity_pregraph.xml
+++ b/app/src/main/res/layout/activity_pregraph.xml
@@ -70,7 +70,6 @@
             android:layout_marginTop="20dp"
             android:ems="20"
             android:hint="@string/_0"
-            android:inputType="numberDecimal|numberSigned"
             android:textColor="@android:color/black"
             android:textColorHighlight="@android:color/darker_gray"
             android:textColorHint="@android:color/black"
@@ -85,7 +84,7 @@
             android:layout_marginTop="20dp"
             android:ems="20"
             android:hint="@string/_0"
-            android:inputType="numberDecimal|numberSigned"
+            android:inputType="numberSigned|numberDecimal"
             android:textColor="@android:color/black"
             android:textColorHighlight="@android:color/darker_gray"
             android:textColorHint="@android:color/black"
