--- a/app/src/main/res/layout/activity_numbersysdey.xml
+++ b/app/src/main/res/layout/activity_numbersysdey.xml
@@ -78,6 +78,7 @@
             android:ems="20"
             android:hint="@string/infonumb1"
             android:inputType="textCapCharacters"
+            android:digits="0123456789ABCDEF-"
             android:labelFor="@+id/input1"
             android:textColor="@android:color/black"
             android:textColorHighlight="@android:color/darker_gray"
@@ -95,6 +96,7 @@
             android:ems="20"
             android:hint="@string/infonumbsys2"
             android:inputType="textCapCharacters"
+            android:digits="0123456789ABCDEF-"
             android:labelFor="@+id/input1"
             android:textColor="@android:color/black"
             android:textColorHighlight="@android:color/darker_gray"
