--- a/app/src/main/res/layout/activity_pregraph.xml
+++ b/app/src/main/res/layout/activity_pregraph.xml
@@ -53,6 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:digits="0123456789.-"
             android:ems="20"
             android:hint="@string/_0"
             android:inputType="numberDecimal|numberSigned"
@@ -70,6 +71,8 @@
             android:layout_marginTop="20dp"
             android:ems="20"
             android:hint="@string/_0"
+            android:inputType="numberDecimal|numberSigned"
+            android:digits="0123456789.-"
             android:textColor="@android:color/black"
             android:textColorHighlight="@android:color/darker_gray"
             android:textColorHint="@android:color/black"
@@ -85,6 +88,7 @@
             android:ems="20"
             android:hint="@string/_0"
             android:inputType="numberSigned|numberDecimal"
+            android:digits="0123456789.-"
             android:textColor="@android:color/black"
             android:textColorHighlight="@android:color/darker_gray"
             android:textColorHint="@android:color/black"
@@ -100,6 +104,7 @@
             android:ems="20"
             android:hint="@string/_0"
             android:inputType="numberDecimal|numberSigned"
+            android:digits="0123456789.-"
             android:textColor="@android:color/black"
             android:textColorHighlight="@android:color/darker_gray"
             android:textColorHint="@android:color/black"
@@ -115,13 +120,12 @@
             android:ems="20"
             android:hint="@string/_0"
             android:inputType="numberDecimal|numberSigned"
+            android:digits="0123456789.-"
             android:textColor="@android:color/black"
             android:textColorHighlight="@android:color/darker_gray"
             android:textColorHint="@android:color/black"
             android:textColorLink="@android:color/darker_gray"
             android:textStyle="italic"
             android:visibility="invisible" />
-
-
     </LinearLayout>
 </ScrollView>
