--- a/app/src/main/res/layout/activity_resh.xml
+++ b/app/src/main/res/layout/activity_resh.xml
@@ -38,8 +38,52 @@
             android:theme="@style/AppTheme"
             android:visibility="invisible" />
 
+        <Spinner
+            android:id="@+id/spinner2"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginTop="20dp"
+            android:theme="@style/AppTheme"
+            android:visibility="invisible" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Результат"
+            android:visibility="invisible" />
         <EditText
-            android:id="@+id/input4"
+            android:id="@+id/input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:ems="20"
+            android:hint="@string/_0"
+            android:inputType="numberDecimal|numberSigned"
+            android:textColor="@android:color/black"
+            android:textColorHighlight="@android:color/darker_gray"
+            android:textColorHint="@android:color/black"
+            android:textColorLink="@android:color/darker_gray"
+            android:textStyle="italic"
+            android:visibility="invisible" />
+
+        <EditText
+            android:id="@+id/input1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:ems="20"
+            android:hint="@string/_0"
+            android:inputType="numberDecimal|numberSigned"
+            android:textColor="@android:color/black"
+            android:textColorHighlight="@android:color/darker_gray"
+            android:textColorHint="@android:color/black"
+            android:textColorLink="@android:color/darker_gray"
+            android:textStyle="italic"
+            android:visibility="invisible" />
+
+        <EditText
+            android:id="@+id/input2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
