--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,5 +11,21 @@
         android:title="О программе"
         android:visible="true"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/action_profile"
+        android:enabled="true"
+        android:icon="@android:drawable/ic_menu_help"
+        android:orderInCategory="100"
+        android:title="Профиль"
+        android:visible="true"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_auth"
+        android:enabled="true"
+        android:icon="@android:drawable/ic_menu_help"
+        android:orderInCategory="100"
+        android:title="Авторизоваться"
+        android:visible="true"
+        app:showAsAction="always" />
 
 </menu>
