--- a/app/src/main/res/layout/activity_resh.xml
+++ b/app/src/main/res/layout/activity_resh.xml
@@ -33,7 +33,7 @@
         <Spinner
             android:id="@+id/spinner1"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:theme="@style/AppTheme"
             android:visibility="invisible" />
@@ -50,6 +50,7 @@
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:text="Результат"
             android:visibility="invisible" />
         <EditText
