--- a/app/src/main/res/layout/activity_schitgame.xml
+++ b/app/src/main/res/layout/activity_schitgame.xml
@@ -65,18 +65,18 @@
 
         <TextView
             android:id="@+id/question"
-            android:layout_width="75dp"
+            android:layout_width="85dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="2dp"
             android:layout_marginStart="2dp"
             android:layout_marginTop="2dp"
             android:layout_weight="1"
             android:background="#edecec"
-            android:gravity="center|right"
+            android:gravity="right|center"
             android:padding="5dp"
-            android:text="-500 + -500 ="
+            android:text="@string/_0_0"
             android:textColor="@android:color/holo_green_dark"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold|italic" />
 
         <TextView
@@ -92,13 +92,13 @@
             android:padding="5dp"
             android:text="?"
             android:textColor="@android:color/holo_green_dark"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textStyle="bold|italic" />
 
         <Button
             android:id="@+id/cancel"
             style="@android:style/ButtonBar"
-            android:layout_width="35dp"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
             android:layout_weight="1"
